WIP: local updates before switching to frontend